--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "ngx-cookie-service": "^16.0.0",
     "ngx-progressbar": "^11.0.0",
     "ngx-typed-js": "^2.1.1",
     "rxjs": "~7.8.0",
