--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run Portfolio:serve-ssr",
+    "serve:ssr": "node dist/Portfolio/server/main.js",
+    "build:ssr": "ng build && ng run Portfolio:server",
+    "prerender": "ng run Portfolio:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +23,10 @@
     "@angular/material": "^16.1.5",
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
+    "@angular/platform-server": "^16.1.5",
     "@angular/router": "^16.1.5",
+    "@nguniversal/express-engine": "^16.1.1",
+    "express": "^4.15.2",
     "ngx-cookie-service": "^16.0.0",
     "ngx-progressbar": "^11.0.0",
     "ngx-typed-js": "^2.1.1",
@@ -31,7 +38,10 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.5",
+    "@nguniversal/builders": "^16.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
